# quaternion

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/quaternion/: quaternion.py  vector3.py
src/quaternion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
testing/: assert_equal.py  test_quaternion.py  test_vector3.py
